# stripedhyena

./: .gitignore  Dockerfile  README.md  checkpoint_conversion.py  generate.py  generate_transformers.py  longer_prompt.txt  pyproject.toml  requirements.txt  setup.py  sh_inference_config_7b.yml  test_prompt.txt
.github/workflows/: style.yml
configs/: 7b-sh-32k-v0.1.yml  sh-stem-test.yml  sh_inference_config_7b.yml
csrc/: README.md
src/: cache.py  engine.py  generation.py  layers.py  model.py  mpu.py  positional_embeddings.py  sample.py  tokenizer.py  utils.py
stripedhyena/: engine.py  generation.py  layers.py  model.py
test/: test_backward.py  test_forward.py  test_numerics.py  test_prefill.py
