[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "stripedhyena"
version = "0.2.1"
description = "Model and inference code for beyond Transformer architectures"
readme = "README.md"
license = {file = "LICENSE"}
authors = [{ name = "Michael Poli"}]
dependencies = [
    "transformers",
    "tokenizers",
    "flash_attn>=2.0.0"
]

[tool.black]
line-length = 119

[tool.isort]
profile = "black"
line_length = 119
combine_as_imports = true
combine_star = true

[tool.setuptools]
packages = ['stripedhyena']
